[gd_scene load_steps=11 format=3 uid="uid://bwmg4hsem3wt7"]

[ext_resource type="Script" path="res://gameplay/scripts/enemy.gd" id="1_mlcr2"]
[ext_resource type="Resource" uid="uid://bakhahtj7ivbd" path="res://gameplay/items/Square.tres" id="2_fataw"]
[ext_resource type="PackedScene" uid="uid://d0rwcldw3htfy" path="res://gameplay/nodes/collectible.tscn" id="2_trtem"]
[ext_resource type="Script" path="res://gameplay/scripts/Drop.gd" id="3_g541u"]
[ext_resource type="Script" path="res://gameplay/scripts/FacePlayerComponent.gd" id="4_tvikq"]
[ext_resource type="PackedScene" uid="uid://b6n1u35tex1x4" path="res://gameplay/nodes/health_component.tscn" id="7_1ll2t"]

[sub_resource type="Resource" id="Resource_r3mf2"]
script = ExtResource("3_g541u")
drop_chance = 0.5
item = ExtResource("2_fataw")

[sub_resource type="Animation" id="Animation_8kg5v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hjqgq"]
resource_name = "damaged"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(0.811765, 0.0666667, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qvluv"]
_data = {
"RESET": SubResource("Animation_8kg5v"),
"damaged": SubResource("Animation_hjqgq")
}

[node name="Enemy" type="RigidBody2D" node_paths=PackedStringArray("health") groups=["enemy"]]
z_index = 1
collision_layer = 4
collision_mask = 3
gravity_scale = 0.0
lock_rotation = true
linear_damp = 2.0
script = ExtResource("1_mlcr2")
health = NodePath("HealthComponent")
collectible_scene = ExtResource("2_trtem")
drops = Array[ExtResource("3_g541u")]([SubResource("Resource_r3mf2")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
debug_color = Color(1, 0, 0.141176, 0.243137)

[node name="Pivot" type="Node2D" parent="."]
editor_description = "Place visuals inside here"

[node name="FacePlayerComponent" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_tvikq")
target = NodePath("../Pivot")

[node name="HealthComponent" parent="." instance=ExtResource("7_1ll2t")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qvluv")
}

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="damaged" from="HealthComponent" to="." method="_on_health_component_damaged"]
